<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">greatindream</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_index_view">IndexView</string>
    <string name="title_activity_login_view">LoginView</string>
    <string name="login_activity_username">用户名:</string>
    <string name="login_activity_password">密码：</string>
    <string name="login_activity_username_hint">请输入用户名</string>
    <string name="login_activity_password_hint">请输入密码</string>
    <string name="login_activity_reg">注册帐号</string>
    <string name="login_activity_login">登  录</string>
    <string name="login_activity_rememberPW">记住密码:</string>
    <string name="login_activity_autoLogin">自动登录:</string>
    <string name="login_activity_rememberMe">记住我的登录信息</string>
    <string name="title_activity_quick_menu">QuickMenuActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_mine">MineActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="swipe">Swipe from left to right</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_book_content">BookContentActivity</string>
    <string name="title_activity_course_home">CourseHomeActivity</string>

</resources>
